Fixed bug on small screens
Fixed a bug with the four dayselectors on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ body {
 	border: 4px solid rgba(247,249,250,1);
 	text-align: center;
 	border-radius: 3px;
+	margin-bottom: 5px;
 }
 
 h1 {
@@ -29,7 +30,7 @@ h2 {
 
 h3 {
   	margin-top: 0px;
-  	margin-bottom: 10px;
+  	margin-bottom: 0px;
   	font-size: 20px;
 	font-weight: 100;
 
@@ -200,6 +201,8 @@ p {
 	font-weight: 300;
 	font-size: 20px;
 	display: inline;
+	margin-bottom: 10px;
+	display: block;
 }
 
 .center {
